--- a/app/views/player/login.html.erb
+++ b/app/views/player/login.html.erb
@@ -17,7 +17,7 @@
       <div class="col-md-6">
         <form method="post" action="/login">
 
-          <input class="form-control" name="name" type="number"><br/>
+          <input class="form-control" name="name" type="text"><br/>
           <input class="btn btn-success btn-block" type="submit" value="Login">
         </form>
       </div>
