--- a/app/views/player/code.html.erb
+++ b/app/views/player/code.html.erb
@@ -14,10 +14,10 @@
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-     document.getElementById("demo").innerHTML = this.responseText;
+      console.log(this.responseText)
     }
   };
-  xhttp.open("GET", "/round_start", true);
+  xhttp.open("GET", "http://193.191.169.45:8000/round_start", true);
   xhttp.send();
 
 // Set the date we're counting down to
