--- a/app/views/player/code.html.erb
+++ b/app/views/player/code.html.erb
@@ -14,7 +14,8 @@
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      console.log(this.responseText)
+      console.log(this.responseText);
+      console.log("hoera");
     }
   };
   xhttp.open("GET", "http://193.191.169.45:8000/round_start", true);
