--- a/app/views/player/code.html.erb
+++ b/app/views/player/code.html.erb
@@ -14,16 +14,13 @@
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      console.log(this.responseText);
-      console.log("hoera");
+      var countDownDate = this.responseText; 
     }
   };
   xhttp.open("GET", "http://193.191.169.45:8000/round_start", true);
   xhttp.send();
 
 // Set the date we're counting down to
-var countDownDate = new Date("Sep 5, 2017 15:37:25").getTime();
- console.log(countDownDate)
 
 // Update the count down every 1 second
 var x = setInterval(function() {
