--- a/app/views/player/code.html.erb
+++ b/app/views/player/code.html.erb
@@ -11,7 +11,7 @@
 
 <script>
 
-  car countDownDate = 0;
+  var countDownDate = 0;
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
