--- a/app/views/player/code.html.erb
+++ b/app/views/player/code.html.erb
@@ -4,8 +4,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+
 <p id="demo"></p>
 
 
@@ -30,11 +29,11 @@ var x = setInterval(function() {
   var now = new Date().getTime();
 
   // Find the distance between now an the count down date
-  var distance =  (now - countDownDate);
+  var distance =  120 - (now - countDownDate);
 
   // Time calculations for days, hours, minutes and seconds
-  var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)) % 2);
-  var seconds = 60 - Math.floor((distance % (1000 * 60)) / 1000);
+  var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
   document.getElementById("demo").innerHTML = minutes + "m " + seconds + "s ";
